--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[] 501 add html and image.
+[X] 501 add html and image.
 [X] Change the run function.
 [X] Make a new client class and store the client_fd, client stuff that where inside the client.
 [X] Work on handleResponse.
