--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,12 @@
 [X] 501 add html and image.
 [X] Change the run function.
-[X] Make a new client class and store the client_fd, client stuff that where inside the client.
-[X] Work on handleResponse.
-[] Create a response based on the client request
-[] Clean Up the Parsing 
+[X]	Make a new client class and store the client_fd, client stuff that where inside the client.
+[X]	Work on handleResponse.
+[]	Create a response based on the client request
+[]	Clean Up the Parsing
+[]	Make a separate requestParser class
+[]	readRequest in Client class
+[]	handleRequest in Server class
+[]	we should set default client_max_body if its not specified
+	and probably limit the max size in config aswell
+
