--- a/todo.txt
+++ b/todo.txt
@@ -4,10 +4,14 @@
 [X]	Work on handleResponse.
 []	Create a response based on the client request
 []	Clean Up the Parsing
-[]	Make a separate requestParser class
-[]	readRequest in Client class
-[]	handleRequest in Server class
+[X]	Make a separate requestParser class
+[X]	readRequest in Client class
+[]	sentRequest in Server class instead of Client???
 []	we should set default client_max_body if its not specified
 	and probably limit the max size in config aswell
-[] Check if GET has a body, if so then send 400 BAD REQUEST
+[]	Check if GET has a body, if so then send 400 BAD REQUEST
+[]	CheckHeaders
+[]	Assign a configuration server to the clients through the Server*
+[]	CGI 
+
 
