refactored server storage and almost done with setserver function, so program is able to handle multiple servers on the same ip/host

--- a/todo.txt
+++ b/todo.txt
@@ -6,12 +6,18 @@
 []	Clean Up the Parsing
 [X]	Make a separate requestParser class
 [X]	readRequest in Client class
-[]	sentRequest in Server class instead of Client???
+[]	sendRequest in Server class instead of Client???
 []	we should set default client_max_body if its not specified
 	and probably limit the max size in config aswell
 []	Check if GET has a body, if so then send 400 BAD REQUEST
 []	CheckHeaders
 []	Assign a configuration server to the clients through the Server*
+	One socket per unique IP/port and only use different configuration.
+	Maybe the server map should become this: std::map<int, std::vector<Server*>> socketToServers;
+	So we have a vector of servers for each socket.
 []	CGI 
+[]	Maybe change the request class and requestParser so that request has an instance 
+	of requestParser after all, i think its cleaner, because request will only contain the variables
+	and client can acces it more easily
 
 
