fixed zombie processes

--- a/todo.txt
+++ b/todo.txt
@@ -38,6 +38,6 @@ TODO:
 [X] Do we need actual forms or by uploading an image is good enough?
 [] We need to find a solution to /favicon.ico cause it keeps causing issues, thought I solved it but apparently I did so not :/
 [X] Check why 2 sockets get created for 2 servers with same host/port
-[] Determine how to handle custom root and cgi-bin
+[] Determine how to handle custom root and cgi-bin -> only check file extensions
 [] Handle multiple server_names anddd handle same host - same port - no server name
 [] Optimize child process, make sure there's no zombie processes / handle time-out
