--- a/todo.txt
+++ b/todo.txt
@@ -40,5 +40,6 @@ TODO:
 [X] Check why 2 sockets get created for 2 servers with same host/port
 [] Determine how to handle custom root and cgi-bin -> only check file extensions
 [X] Handle multiple server_names anddd
-[] handle same host - same port - no server name
+[X] handle same host - same port - no server name
 [X] Optimize child process, make sure there's no zombie processes / handle time-out
+[] set env variables for CGI
