--- a/todo.txt
+++ b/todo.txt
@@ -43,3 +43,7 @@ TODO:
 [X] handle same host - same port - no server name
 [X] Optimize child process, make sure there's no zombie processes / handle time-out
 [] set env variables for CGI
+
+Clean up code
+[] Alter makefile so we're not using wildcard anymore
+[] Link header files in library so we can include <webserv.hpp> instead of "../src/server/webserv.hpp"
