parser looks better but is not finished yet, haven't tested it

--- a/todo.txt
+++ b/todo.txt
@@ -42,4 +42,4 @@ TODO:
 [X] Handle multiple server_names anddd
 [X] handle same host - same port - no server name
 [X] Optimize child process, make sure there's no zombie processes / handle time-out
-[] set env variables for CGI
+[X] set env variables for CGI
