--- a/todo.txt
+++ b/todo.txt
@@ -42,8 +42,19 @@ TODO:
 [X] Handle multiple server_names anddd
 [X] handle same host - same port - no server name
 [X] Optimize child process, make sure there's no zombie processes / handle time-out
-[] set env variables for CGI
+[X] set env variables for CGI
+[X] Close socket fd's in child process
+[] Determine how to handle custom root and cgi-bin -> only check file extensions
+[] We need to find a solution to /favicon.ico cause it keeps causing issues, thought I solved it but apparently I did so not :/
+[] CGI needs to run according to extensions
 
-Clean up code
-[] Alter makefile so we're not using wildcard anymore
+Test:
+[X] Signals - valgrind, open fd's, 
+[] Test that the error codes are accurate
+[] Test with changes in the configuration file, whatever happens, it should not crash
+[] Error page Redirections
+[] Is there already a default server if nothing matches???? -> Test with curl?
+
+Clean up:
+[] Makefile so we're not using wildcard anymore
 [] Link header files in library so we can include <webserv.hpp> instead of "../src/server/webserv.hpp"
